--- a/.gitignore
+++ b/.gitignore
@@ -163,7 +163,19 @@ pip-log.txt
 .DS_Store
 
 # Android
-gen/*
-bin/*
-gen/
+# built application files
+*.apk
+*.ap_
+
+# files for the dex VM
+*.dex
+
+# Java class files
+*.class
+
+# generated files
 bin/
+gen/
+
+# Local configuration file (sdk path, etc)
+local.properties
