--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,16 +1,18 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.iut.ptut"
     android:versionCode="1"
-    android:versionName="1.0" >
+    android:versionName="0.2" >
 
     <uses-sdk
         android:minSdkVersion="8"
-        android:targetSdkVersion="16" />
+        android:targetSdkVersion="11" />
 
     <application
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme">
+        <activity android:name=".ActivityNotification" 
+	     android:label="@string/app_name" />
         <activity
             android:name=".MainActivity"
             android:label="@string/title_activity_main" >
@@ -21,5 +23,5 @@
             </intent-filter>
         </activity>
     </application>
-
+<uses-permission android:name="android.permission.VIBRATE" />
 </manifest>
