--- a/.gitignore
+++ b/.gitignore
@@ -161,8 +161,10 @@ pip-log.txt
 
 # Mac crap
 .DS_Store
+###########
+# Android #
+###########
 
-# Android
 # built application files
 *.apk
 *.ap_
@@ -174,8 +176,8 @@ pip-log.txt
 *.class
 
 # generated files
-bin/
-gen/
+bin
+gen
 
 # Local configuration file (sdk path, etc)
 local.properties
