--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme">
-        <activity android:name=".ActivityNotification" 
+        <activity android:name=".view.ActivityNotification" 
 	     android:label="@string/app_name" />
         <activity
             android:name=".MainActivity"
