--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -4,13 +4,13 @@
     android:versionName="0.2" >
 
     <uses-sdk
-        android:minSdkVersion="8"
-        android:targetSdkVersion="11" />
+        android:minSdkVersion="11"
+        android:targetSdkVersion="16" />
 
     <application
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme">
+        android:theme="@android:style/Theme.Holo">
         <activity android:name=".view.ActivityNotification" 
 	     android:label="@string/app_name" />
         <activity
