--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -22,6 +22,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity 
+            android:name=".view.WeekActivity">
+        </activity>
     </application>
 <uses-permission android:name="android.permission.VIBRATE" />
 </manifest>
