--- a/assets/config.properties
+++ b/assets/config.properties
@@ -1,3 +1,3 @@
-db_name=database.db
+db_name=database.sqlite
 db_creation_script_name=database/createBase.sql
 db_destruction_script_name=database/dropBase.sql
