--- a/assets/config.properties
+++ b/assets/config.properties
@@ -1,3 +1,7 @@
 db_name=database.sqlite
 db_creation_script_name=database/createBase.sql
 db_destruction_script_name=database/dropBase.sql
+srv_protocol=http
+srv_host_name=algec.iut-blagnac.fr
+srv_path=/~jmi/edt/INFO/edt/
+srv_file_template=S@semestre@@semaine@.ics
