Modification du récupérateur pour marcher la nouvelle version de JMI

--- a/assets/config.properties
+++ b/assets/config.properties
@@ -3,5 +3,5 @@ db_creation_script_name=database/createBase.sql
 db_destruction_script_name=database/dropBase.sql
 srv_protocol=http
 srv_host_name=algec.iut-blagnac.fr
-srv_path=/~jmi/edt/INFO/edt/
-srv_file_template=S@semestre@@semaine@.ics
+srv_path=/~jmi/edt/INFO/edt
+srv_file_template=/@semaine@/S@semestre@@semaine@.ics
