nouvelle interface + affichage semaine mis a jour

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -26,6 +26,9 @@
             android:name=".view.WeekActivity">
         </activity>
         <activity 
+            android:name=".view.MessagesActivity">
+        </activity>
+        <activity 
             android:name=".view.TodayActivity">
         </activity>
     </application>
