Ajout d'une librairie pour pouvoir facilement progrmmaer une tâche récurrente. Ajout de permissions dans le Manifest pour pouvoir s'exxécuter en tâche de fond.

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -29,5 +29,9 @@
             android:name=".view.TodayActivity">
         </activity>
     </application>
+    
+<!-- Pour pouvoir programmer le CRON -->
+<uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" /> 
+<uses-permission android:name="android.permission.WAKE_LOCK" /> 
 <uses-permission android:name="android.permission.VIBRATE" />
 </manifest>
