--- a/assets/config.properties
+++ b/assets/config.properties
@@ -5,3 +5,6 @@ srv_protocol=http
 srv_host_name=algec.iut-blagnac.fr
 srv_path=/~jmi/edt/INFO/edt
 srv_file_template=/@semaine@/S@semestre@@semaine@.ics
+cron_interval=3600
+user_group=2B
+user_semestre=4
