Tache de récupération opérationnelles commandant !

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -36,5 +36,9 @@
 <!-- Pour pouvoir programmer le CRON -->
 <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" /> 
 <uses-permission android:name="android.permission.WAKE_LOCK" /> 
+
+<!--  Accès à Internet -->
+<uses-permission android:name="android.permission.INTERNET" /> 
+
 <uses-permission android:name="android.permission.VIBRATE" />
 </manifest>
