--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -4,7 +4,7 @@
     android:versionName="0.2" >
 
     <uses-sdk
-        android:minSdkVersion="13"
+        android:minSdkVersion="11"
         android:targetSdkVersion="16" />
 
     <application
@@ -14,7 +14,7 @@
         <activity android:name=".view.ActivityNotification" 
 	     android:label="@string/app_name" />
         <activity
-            android:name="com.iut.ptut.view.MainActivity"
+            android:name=".MainActivity"
             android:label="@string/title_activity_main" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
