--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -11,25 +11,18 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@android:style/Theme.Holo.Light">
+        
         <activity android:name=".view.ActivityNotification" 
 	     android:label="@string/app_name" />
+        
         <activity
             android:name="com.iut.ptut.view.MainActivity"
-            android:label="@string/title_activity_main" >
+            android:label="@string/title_activity_main" android:configChanges="orientation">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-        <activity 
-            android:name=".view.WeekActivity">
-        </activity>
-        <activity 
-            android:name=".view.MessagesActivity">
-        </activity>
-        <activity 
-            android:name=".view.TodayActivity">
         </activity>
     </application>
     
