--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -24,14 +24,17 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        
     </application>
     
-<!-- Pour pouvoir programmer le CRON -->
-<uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" /> 
-<uses-permission android:name="android.permission.WAKE_LOCK" /> 
+	<!-- Pour pouvoir programmer le CRON -->
+	<uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" /> 
+	<uses-permission android:name="android.permission.WAKE_LOCK" /> 
+	<uses-permission android:name="android.permission.VIBRATE" />
+	<!--  Accès à Internet -->
+	<uses-permission android:name="android.permission.INTERNET" /> 
+	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+	
+	
 
-<!--  Accès à Internet -->
-<uses-permission android:name="android.permission.INTERNET" /> 
-
-<uses-permission android:name="android.permission.VIBRATE" />
 </manifest>
