Application semi-opérationnelle. Manque:   - CRON   - Détection des différences entre les emplois du temps   - INterface de paramétrage

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -25,6 +25,8 @@
             </intent-filter>
         </activity>
         
+        <receiver  android:process=":remote" android:name="AlarmReceiver"></receiver>
+        
     </application>
     
 	<!-- Pour pouvoir programmer le CRON -->
