--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.iut.ptut"
     android:versionCode="1"
-    android:versionName="0.2" >
+    android:versionName="RECETTE" >
 
     <uses-sdk
         android:minSdkVersion="13"
