--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -2,14 +2,14 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.iut.ptut"
     android:versionCode="1"
-    android:versionName="RECETTE" >
+    android:versionName="1.0" >
 
     <uses-sdk
         android:minSdkVersion="13"
         android:targetSdkVersion="16" />
 
     <application
-        android:icon="@drawable/ic_launcher"
+        android:icon="@drawable/icone_application"
         android:label="@string/app_name"
         android:theme="@android:style/Theme.Holo.Light" >
         <activity
